# ml-7th-sem-labs

./: .gitignore  README.md  lab1_knn.ipynb  lab2_linear.ipynb  lab3_tree.ipynb  lab4_forest.ipynb  lab5_boosting.ipynb  pyproject.toml
