[project]
name = "ml-7th-sem-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.2",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=2.3.5",
    "openml>=0.15.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
